# Sentinal-AI

./: .smartreview.yml  README.md  pyproject.toml  requirements.txt  scr  setup.py
api/: index.py
fixtures/: example.diff  example_report.json
src/: example.py
src/scr/: __main__.py  cli.py  config.py  context.py  engine.py  inputs.py  models.py  ranking.py  renderers.py  web.py
src/scr/analyzers/: llm.py  static.py  tool_runner.py
src/scr/templates/: index.html  report.html
src/smart_code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_golden.py  test_inputs.py  test_ranking.py  test_renderers.py
